# crabby

./: CMakeLists.txt  crabbyConfig.cmake.in  flake.nix
include/crabby/: box.t.h  checked.t.h  cmp.t.h  numbers.h  option.t.h  ordering.h  utilities.h  vec.t.h
src/: main.c
